[gd_scene load_steps=8 format=3 uid="uid://bdot2u8w1qo2k"]

[ext_resource type="Texture2D" uid="uid://d22l2c18p2sfq" path="res://Assets/Images/Sprites/Gamepad.png" id="1_8b0di"]
[ext_resource type="Script" path="res://Scenes/Components/Hud/hud.gd" id="1_n14dp"]
[ext_resource type="AudioStream" uid="uid://dbfpgcufweula" path="res://Assets/Audio/UI/Modern8.wav" id="3_gk4ef"]
[ext_resource type="Shader" path="res://Shaders/Alpha_Pulse.gdshader" id="3_s1t37"]
[ext_resource type="AudioStream" uid="uid://cpb1grkltm0hq" path="res://Assets/Audio/UI/Modern9.wav" id="4_l3w48"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ppixb"]
shader = ExtResource("3_s1t37")
shader_parameter/is_pulsing = false
shader_parameter/speed = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yy7ur"]
shader = ExtResource("3_s1t37")
shader_parameter/is_pulsing = false
shader_parameter/speed = 2.0

[node name="HUD" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n14dp")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Gamepads" type="ColorRect" parent="."]
self_modulate = Color(0, 0, 0, 0.0588235)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -58.0
offset_right = 58.0
offset_bottom = 38.0
grow_horizontal = 2

[node name="BoxContainer" type="BoxContainer" parent="Gamepads"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.5
offset_top = 7.0
offset_right = 46.5
offset_bottom = 33.0
grow_horizontal = 2

[node name="Gamepad_Icon" type="TextureRect" parent="Gamepads/BoxContainer"]
custom_minimum_size = Vector2(34, 26)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("1_8b0di")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="Gamepads/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 12

[node name="HBoxContainer" type="HBoxContainer" parent="Gamepads/BoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Gamepad1_State" type="ColorRect" parent="Gamepads/BoxContainer/MarginContainer/HBoxContainer"]
material = SubResource("ShaderMaterial_ppixb")
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.227451, 0.227451, 0.227451, 1)

[node name="Gamepad2_State" type="ColorRect" parent="Gamepads/BoxContainer/MarginContainer/HBoxContainer"]
material = SubResource("ShaderMaterial_yy7ur")
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.227451, 0.227451, 0.227451, 1)

[node name="PausedLabel" type="Label" parent="Gamepads"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -61.0
offset_top = 40.0
offset_right = 63.0
offset_bottom = 85.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "PAUSED"
uppercase = true

[node name="GamepadConnected" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
process_mode = 3
stream = ExtResource("3_gk4ef")

[node name="GamepadDisconnected" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
process_mode = 3
stream = ExtResource("4_l3w48")
